<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ic_launcher_name">Zom</string>
    <string name="app_name">Zom</string>
    <string name="im_label">Zom</string>
    <string name="ro_perm_label">read instant messages</string>
    <string name="ro_perm_desc">Allows applications to read data from the IM content provider.</string>
    <string name="wo_perm_label">write instant messages</string>
    <string name="wo_perm_desc">Allows applications to write data to the IM content provider.</string>
    <string name="perm_label">start IM service</string>
    <string name="perm_desc">Allows applications to start IM service via intent.</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="connect">Connect</string>
    <string name="play">Play</string>
    <string name="setup">Setup</string>
    <string name="lock_screen_open">Open</string>
    <string name="title_activity_lock_screen">ChatSecure Locked</string>
    <string name="lock_screen_create_passphrase">Set Password</string>
    <string name="lock_screen_confirm_passphrase">Confirm Password</string>
    <string name="lock_screen_passphrase_hint">Password</string>
    <string name="lock_screen_passphrase_not_set_enter">Please set a passphrase to lock the app</string>
    <string name="lock_screen_passphrase_not_set_confirm">Confirm New Password</string>
    <string name="lock_screen_passphrases_not_matching">Password did not match, please try again</string>
    <string name="lock_screen_skip">Skip &gt;&gt;</string>
    <string name="app_passphrase_view_title_dialog">Information Prompt</string>
    <string name="app_passphrase_view_password_question">Enter Password Please</string>
    <string name="password_please">Password please…</string>
    <string name="passphrase">Passphrase</string>
    <string name="passphrase_again">Passphrase (again)</string>
    <string name="landing_page_title">Select an account</string>
    <string name="choose_account_title">Select an account</string>
    <string name="conversations">(<xliff:g example="27" id="number">%1$d</xliff:g>)</string>
    <string name="add_account">Add <xliff:g id="account">%1$s</xliff:g> account</string>
    <string name="menu_about">About</string>
    <string name="menu_sign_out_all">Sign out all</string>
    <string name="signout_all_confirm_message">Do you want to sign out all services?</string>
    <string name="signed_out_prompt">You have been signed out of <xliff:g id="account">%1$s</xliff:g>.</string>
    <string name="signed_out_prompt_with_error">You have been signed out of <xliff:g id="account">%1$s</xliff:g> because <xliff:g id="reason">%2$s</xliff:g></string>
    <string name="welcome_first">First time using ChatSecure?</string>
    <string name="welcome_skip">Can\'t wait to get started?</string>
    <string name="welcome_about">Get Started</string>
    <string name="welcome_account">Account Setup</string>
    <string name="setup_passphrase_title">Passphrase Setup</string>
    <string name="setup_passphrase">Before you get started please choose a secure passphrase to protect your ChatSecure data from unjust access.</string>
    <string name="setup_passphrase_label1">Passphrase:</string>
    <string name="setup_passphrase_label2">Passphrase (again):</string>
    <string name="rekey_message">Enter a *new* passphrase. It must contain at least one uppercase, one lowercase and one number, and be longer than six characters.</string>
    <string name="do_rekey">Encrypting your existing notes with the new passphrase (patience…)</string>
    <string name="enter_pass">Enter your passphrase:</string>
    <string name="new_pass">Welcome! Enter a strong passphrase to secure your notes. It must contain at least one uppercase, one lowercase and one number, and be longer than six characters.</string>
    <string name="pass_err_length">Your passphrase was not long enough</string>
    <string name="pass_err_upper">Your passphrase did not contain any uppercase letters</string>
    <string name="pass_err_lower">Your passphrase did not contain any lowercase letters</string>
    <string name="pass_err_num">Your passphrase did not contain any numbers</string>
    <string name="about_welcome_title">About ChatSecure</string>
    <string name="about_welcome">ChatSecure is a mobile instant messaging app that provides extra security features that prevent others from snooping on your conversations and communications.\n\nThe app supports any chat service that uses the Jabber or XMPP protocol, such as Google GTalk or Jabber.org.</string>
    <string name="about_otr_title">How is it secure?</string>
    <string name="about_otr">\'Off-the-Record Messaging\' is a security system designed to enable privacy by mimicking the characteristics of a private conversation in the real world, including Encryption, Authentication, Deniability and Forward Secrecy.\n\nThe OTR-protocol is compatible with desktop chat clients such as Adium or Pidgin.</string>
    <string name="about_security_title">Are My Chats Secure?</string>
    <string name="about_security">ChatSecure\'s chat encryption feature only works when messaging with others using a compatible app or program, so you should ensure your contacts are using ChatSecure for mobile and Adium or Pidgin for the desktop. You can fine-tune exactly how and when ChatSecure attempts to encrypt your chats in Account Settings.\n\nLet\'s get started!</string>
    <string name="menu_new_account">New Account</string>
    <string name="menu_add_account">Add Account</string>
    <string name="menu_edit_account">Edit Account</string>
    <string name="menu_remove_account">Remove Account</string>
    <string name="menu_use_existing_account">Existing Account</string>
    <string name="label_username">User@Host</string>
    <string name="label_password">Password:</string>
    <string name="remember_password">Remember my password.</string>
    <string name="keep_me_signed_in">Sign me in automatically.</string>
    <string name="sign_up">Don\u2019t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="check_save_password">For your security, if your phone is lost or stolen, go to the Web site on your computer and change your password.</string>
    <string name="check_auto_sign_in">This option automatically signs you in every time you open this application. To disable the option, sign out, then clear the \"Sign me in automatically\" check box.</string>
    <string name="use_tor">Connect via Tor (Requires Orbot app)</string>
    <string name="account_setup_example_email_address">user@domain</string>
    <string name="account_setup_new_username">new username</string>
    <string name="account_setup_service_provider">service provider (dukgo.com, jabber.ccc.de)</string>
    <string name="account_setup_password">password</string>
    <string name="account_setup_password_confirm">confirm password</string>
    <string name="account_setup_advanced_button">Advanced Account Settings</string>
    <string name="account_select_type">Account Setup</string>
    <string name="btn_create_new_account">Register Account</string>
    <string name="account_setup_pers_sub">Persistence</string>
    <string name="account_setup_pers_pw_title">Remember Password</string>
    <string name="account_setup_pers_pw_on">Password cached</string>
    <string name="account_setup_pers_pw_off">Password not cached</string>
    <string name="account_setup_pers_auto_title">Automatically Sign In</string>
    <string name="account_setup_pers_auto_on">Connect at ChatSecure start-up</string>
    <string name="account_setup_pers_auto_off">Don\'t connect at ChatSecure start-up</string>
    <string name="account_setup_pers_now_title">Sign In Now</string>
    <string name="account_setup_pers_now_on">Connect following account setup</string>
    <string name="account_setup_pers_now_off">Don\'t connect following account setup</string>
    <string name="account_setup_personal_sub">Personal (optional)</string>
    <string name="account_setup_personal_alias_title">Account Alias (your name)</string>
    <string name="account_setup_personal_alias_sub">How your account appears online</string>
    <string name="account_setup_personal_profile_title">Profile</string>
    <string name="account_setup_personal_profile_sub">A brief blurb about yourself</string>
    <string name="select_domain_new_account">Chat service domain</string>
    <string name="how_encrypted_chats_are_started">how encrypted chats are started</string>
    <string name="menu_view_blocked">Blocked</string>
    <string name="search_button_text">Go</string>
    <string name="chat_encryption_title">Chat Encryption</string>
    <string name="pref_group_security_title">Security and Privacy</string>
    <string name="pref_linkify_on_tor_title">Clickable links on Tor</string>
    <string name="pref_linkify_on_tor_summary">For accounts using Tor, make the links in chats clickable (WARNING, possible privacy leak!)</string>
    <string name="KEY_PREF_LANGUAGE_TITLE">Languages</string>
    <string name="pref_delete_unsecured_media_title">Delete Insecure Media</string>
    <string name="pref_delete_unsecured_media_summary">After sharing a photo or file, automatically delete it from the original, insecure storage after import</string>
    <string name="pref_group_tuning_title">Other Tuning</string>
    <string name="start_on_boot">Start ChatSecure Automatically</string>
    <string name="start_on_boot_summary">Always start and automatically sign into previously logged in accounts</string>
    <string name="hide_offline_contacts">Hide offline contacts</string>
    <string name="foreground_service_title">Use foreground priority</string>
    <string name="foreground_service_summary">Reduce the chance that Android will restart our connection service.  This will place a notification in the notification area.</string>
    <string name="heartbeat_interval_title">Heartbeat interval</string>
    <string name="heartbeat_interval_summary">Use a higher value (in minutes) to save battery.  A high value may cause the provider to close your connection due to inactivity.</string>
    <string name="notification_group_title">Notification settings</string>
    <string name="notification_enabled_title">IM notifications</string>
    <string name="notification_enabled_summary">Notify in status bar when IM arrives</string>
    <string name="notification_vibrate_title">Vibrate</string>
    <string name="notification_vibrate_summary">Also vibrate when IM arrives</string>
    <string name="notification_sound_title">Sound</string>
    <string name="notification_sound_summary">Also play ringtone when IM arrives</string>
    <string name="notification_ringtone_title">Select Custom Ringtone</string>
    <string name="pref_debug_title">Enable Debug Logs</string>
    <string name="pref_debug_summary">Output app log data to standard out / logcat for debugging</string>
    <string name="pref_group_protect_data_title">Protect My Data</string>
    <string name="panic_trigger_app">Panic Trigger App</string>
    <string name="panic_trigger_app_summary">A panic app can trigger Zom to lock, send a message, delete data, etc.</string>
    <string name="panic_setup">Panic Setup</string>
    <string name="panic_setup_summary">Set up how Zom reacts to a panic notification.</string>
    <string name="protect_data">Protect My Data</string>
    <string name="lock_app">Lock the app</string>
    <string name="clear_app_data">Clear all data within the app</string>
    <string name="uninstall_app">Uninstall the app</string>
    <string name="include_location">Include my location</string>
    <string name="menu_settings">Settings</string>
</resources>