<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Esmertec AG.
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_language"
        android:title="@string/KEY_PREF_LANGUAGE_TITLE" >
    </ListPreference>

   <PreferenceCategory android:title="@string/pref_group_security_title">
  
  <ListPreference android:title="@string/chat_encryption_title"
    android:key="pref_security_otr_mode"
    android:summary="@string/how_encrypted_chats_are_started"
    android:defaultValue="auto" />

  <CheckBoxPreference
          android:key="pref_linkify_on_tor"
          android:title="@string/pref_linkify_on_tor_title"
          android:summary="@string/pref_linkify_on_tor_summary"
          android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_group_protect_data_title">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_delete_unsecured_media"
            android:summary="@string/pref_delete_unsecured_media_summary"
            android:title="@string/pref_delete_unsecured_media_title" />

        <ListPreference
            android:key="pref_panic_trigger_app"
            android:summary="@string/panic_trigger_app_summary"
            android:title="@string/panic_trigger_app" />

        <Preference
            android:key="pref_panic_config"
            android:summary="@string/panic_setup_summary"
            android:title="@string/panic_setup" />

    </PreferenceCategory>

      <PreferenceCategory android:title="@string/pref_group_tuning_title">
   
  <CheckBoxPreference
          android:key="pref_start_on_boot"
          android:title="@string/start_on_boot"
          android:summary="@string/start_on_boot_summary" />
  
   <CheckBoxPreference
          android:key="pref_foreground_enable"
          android:title="@string/foreground_service_title"
          android:summary="@string/foreground_service_summary" />

  <EditTextPreference 
          android:key="pref_heartbeat_interval"
          android:title="@string/heartbeat_interval_title"
          android:summary="@string/heartbeat_interval_summary"
          android:numeric="integer"
          android:maxLength="2" />
   
   <CheckBoxPreference android:key="pref_hide_offline_contacts"
    android:title="@string/hide_offline_contacts" />
   
  </PreferenceCategory>
  
  <PreferenceCategory android:title="@string/notification_group_title">

        <CheckBoxPreference
                android:key="pref_enable_notification"
                android:title="@string/notification_enabled_title"
                android:summary="@string/notification_enabled_summary" />

        <CheckBoxPreference
                android:layout="?android:attr/preferenceLayoutChild"
                android:dependency="pref_enable_notification"
                android:key="pref_notification_vibrate"
                android:title="@string/notification_vibrate_title"
                android:summary="@string/notification_vibrate_summary"
                 />

        <CheckBoxPreference
                android:layout="?android:attr/preferenceLayoutChild"
                android:dependency="pref_enable_notification"
                android:key="pref_notification_sound"
                android:title="@string/notification_sound_title"
                android:summary="@string/notification_sound_summary"
                 />
        
         <Preference
                android:layout="?android:attr/preferenceLayoutChild"
                android:dependency="pref_enable_notification"
                android:key="pref_notification_ringtone"
                android:title="@string/notification_ringtone_title"
                 />
         
         
<!-- 
        <org.awesomeapp.messenger.ui.legacy.ImRingtonePreference
                android:layout="?android:attr/preferenceLayoutChild"
                android:dependency="pref_notification_sound"
                android:key="pref_notification_ringtone"
                android:persistent="false"
                android:title="@string/notification_ringtone_title"
                android:ringtoneType="notification" />
  -->
    </PreferenceCategory>

  

 
  <CheckBoxPreference
          android:key="prefDebug"
          android:title="@string/pref_debug_title"
          android:summary="@string/pref_debug_summary" />


    <CheckBoxPreference
        android:key="prefBlockScreenshots"
        android:title="@string/pref_block_screenshots_title"
        android:summary="@string/pref_block_screenshots_summary"
        android:defaultValue="true"
        />
    <CheckBoxPreference
        android:key="prefEnableTibetanDictionary"
        android:title="@string/pref_enable_tibetan_dictionary_title"
        android:summary="@string/pref_enable_tibetan_dictionary_summary"
        android:defaultValue="true"
        />



</PreferenceScreen>
