<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search_button_text"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_new_account"
        android:icon="@drawable/ic_action_new"
        android:title="@string/accounts"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_lock"
        android:icon="@drawable/ic_lock_outline_black_18dp"
        android:title="@string/lock_app"
        app:showAsAction="never" />

</menu>
