<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_verified_user_white_48dp"
            android:title="Key Manager" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_people_white_36dp"
            android:title="@string/menu_view_blocked" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_about" />
    </group>

    <item
        android:id="@+id/menu_add_account"
        android:icon="@drawable/ic_menu_add_contact"
        android:title="Add Another Account" />

</menu>
