<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/flipViewAdvanced"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="10dp"
android:paddingTop="40dp"
    >


<org.ironrabbit.type.CustomTypefaceEditText android:id="@+id/edtNameAdvanced"
    android:selectAllOnFocus="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/create_id"
    android:autoLink="none"
    android:cursorVisible="true"
    android:inputType="textEmailAddress"
    android:gravity="center"
    android:padding="6dp"
    android:background="@drawable/rounded_rect"
    android:layout_margin="3dp"
    />

<org.awesomeapp.messenger.ui.widgets.InstantAutoCompleteTextView
    android:id="@+id/spinnerDomains"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:drawSelectorOnTop="true"
    android:hint="@string/select_domain_new_account"
    android:completionThreshold="1"
    android:gravity="center"
    android:background="@drawable/rounded_rect"
    android:layout_margin="3dp"
    android:padding="6dp"

    />

<org.ironrabbit.type.CustomTypefaceEditText android:id="@+id/edtNewPass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/account_setup_password"
    android:selectAllOnFocus="true" android:inputType="textPassword"
    android:padding="6dp"
    android:gravity="center"
    android:background="@drawable/rounded_rect"
    android:layout_margin="3dp"
    />

<org.ironrabbit.type.CustomTypefaceEditText android:id="@+id/edtNewPassConfirm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/account_setup_password_confirm"
    android:selectAllOnFocus="true"
    android:inputType="textPassword"
    android:gravity="center"
    android:background="@drawable/rounded_rect"
    android:layout_margin="3dp"
    android:padding="6dp"

    />


<org.ironrabbit.type.CustomTypefaceButton android:id="@+id/btnNewRegister"
    android:text="@string/btn_create_new_account"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dip"
    android:layout_width="match_parent"
    android:layout_gravity="bottom"
    android:background="@drawable/rounded_rect_primary"
    android:textColor="@android:color/white"
    android:gravity="center"
    style="@android:style/Widget.Button"

    />


</LinearLayout>
