<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="10dp"
android:paddingTop="40dp"
    >

<org.ironrabbit.type.CustomTypefaceTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:text="You can use Zom with an existing XMPP/Jabber account on any server you would like."
    android:textSize="18dp"
    android:textColor="@android:color/black"
    />

<org.ironrabbit.type.CustomTypefaceEditText android:id="@+id/edtName"
    android:selectAllOnFocus="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/account_setup_example_email_address"
    android:autoLink="none"
    android:cursorVisible="true"
    android:inputType="textEmailAddress"
    android:gravity="center"
    android:padding="6dp"
    android:background="@drawable/rounded_rect"
    android:layout_margin="3dp"
    />

<org.ironrabbit.type.CustomTypefaceEditText android:id="@+id/edtPass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/account_setup_password"
    android:selectAllOnFocus="true" android:inputType="textPassword"

    android:padding="6dp"
    android:gravity="center"
    android:background="@drawable/rounded_rect"
    android:layout_margin="3dp"
    />

<org.ironrabbit.type.CustomTypefaceButton android:id="@+id/btnSignIn"
    android:text="@string/sign_in"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dip"
    android:layout_width="match_parent"
    android:layout_gravity="bottom"
    android:background="@drawable/rounded_rect_primary"

    android:textColor="@android:color/white"
    android:gravity="center"
    style="@android:style/Widget.Button"

    />

<ProgressBar
    android:id="@+id/progressExistingUser"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:visibility="gone"
    android:layout_gravity="center_horizontal"

    />
<ImageView
    android:id="@+id/progressExistingImage"
    android:layout_width="256dp"
    android:layout_height="wrap_content"
    android:src="@drawable/olo_welcome"
    android:visibility="gone"
    />
</LinearLayout>