<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:filterTouchesWhenObscured="true"

    >

    <LinearLayout
        android:id="@+id/frameRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:src="@drawable/olo_welcome"
            />
        <LinearLayout
            android:id="@+id/llCreatePassphrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ViewFlipper
                android:id="@+id/viewFlipper1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inAnimation="@anim/push_right_in" >

                <LinearLayout
                    android:id="@+id/flipView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                        <org.ironrabbit.type.CustomTypefaceTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/languageButton"
                            android:layout_toStartOf="@+id/languageButton"
                            android:fontFamily="sans-serif"
                            android:text="@string/lock_screen_passphrase_not_set_enter" />


                    <org.ironrabbit.type.CustomTypefaceEditText
                        android:id="@+id/editNewPassphrase"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/lock_screen_passphrase_hint"
                        android:inputType="textPassword"
                        android:gravity="center_horizontal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/flipView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <org.ironrabbit.type.CustomTypefaceEditText
                        android:id="@+id/editConfirmNewPassphrase"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/lock_screen_passphrase_not_set_confirm"
                        android:inputType="textPassword"
                        android:gravity="center_horizontal"
                        />
                </LinearLayout>
            </ViewFlipper>

            <org.ironrabbit.type.CustomTypefaceTextView
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="0dp"
                android:text="@string/lock_screen_create_passphrase" />

            <org.ironrabbit.type.CustomTypefaceTextView
                android:id="@+id/btnSkip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/lock_screen_skip"
                android:background="@android:color/transparent"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEnterPassphrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/llManualAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center" >

                <org.ironrabbit.type.CustomTypefaceEditText
                    android:id="@+id/editEnterPassphrase"
                    android:layout_width="300dip"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/lock_screen_passphrase_hint"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:gravity="center_horizontal"
                    >

                    <requestFocus />
                </org.ironrabbit.type.CustomTypefaceEditText>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>